[cosmo.kim] 자동차 경주 step2  (#118)
* refactor(racing): RandomNumberGeneratorTest에서 메소드명을 한글로 변경

* docs(racing): README.md 프로그램 설계 수정

- 클래스 내 속성 및 메소드 변경된 부분들 반영

* refactor(racing): GameController에서 출력 UI관련 로직을 OutputView에 구현

* refactor(racing): GameController에서 불필요한 메서드 합치기

- playSingleTurn()을 playMultipleTurns()안으로 합치기
- playMultipleTurns()를 playGameMultipleTurns()로 네이밍 변경

* refactor(racing): CarsTest에 테스트 추가

- 자동차 이름이 중복될 수 없다는 테스트 추가

* refactor(racing): CarsTest에서 테스트 변경

- 한명의_우승자가_발생하는_경우()에서 play()를 여러번 하여 테스트

* refactor(racing): Car의 MOVE_LOWER_BOUND 자료형을 double에서 int로 변경

* refactor(racing): CarTest의 메소드명을 더 구체화

* refactor(racing): Cars의 getMaxDistance()에서 orElseThrow()를 orElse()로 수정

* refactor(racing): GameController에서의 게임 반복횟수를 Game이 가지도록 변경

- GameController의 playGameMultipleTurns()를 playGame()으로 변경
- InputView에서 상수명, 메서드명 변경

* refactor(racing): InputValidator에서 validateGameRepeat()을 validateGameTurn()로 메서드명 변경

- 변경한 메서드 내 변수명과 상수명도 변경
- InputView에 변경된 메서드명 적용

* docs(racing): README.md 프로그램 설계 수정

- 수정된 메서드명, 속성명 반영

* refactor(racing): Cars에서 코드 간결하게 변경 및 size() 추가

* refactor(racing): Game에서 gameTurn에 대한 유효성 검사 추가 및 length 인스턴스변수 제거

* refactor(racing): Game을 service 패키지에서 domain 패키지로 이동

* refactor(racing): Game에서 validatePositve()를 validateGameTurnPositive()로 변경

* refactor(racing): 객체의 상태를 나타내는 메소드명을 능동적인 네이밍으로 변경

* test(racing): GameTest 생성 및 테스트 구현

* refactor(racing): 불필요한 import문 제거

* docs(racing): README.md 설계부분 삭제하고 테스트와 연결된 기능명세로 대체