@@ -1,6 +1,7 @@
 package racing.domain;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.util.Arrays;
 import java.util.List;
@@ -16,15 +17,22 @@ public class CarsTest {
     }
 
     @Test
+    void 자동차_이름이_중복될_수_없다() {
+        assertThatThrownBy(() -> new Cars("pobi,pobi,cosmo,kyne"))
+                .isInstanceOf(IllegalArgumentException.class);
+    }
+    @Test
     void 한명의_우승자가_발생하는_경우() {
         cars.play(List.of(0, 1, 2, 8, 3));
-        assertThat(cars.getWinners()).isEqualTo(Arrays.asList("cosmo"));
+        cars.play(List.of(0, 5, 4, 8, 3));
+        cars.play(List.of(0, 7, 7, 8, 5));
+        assertThat(cars.winners()).isEqualTo(Arrays.asList("cosmo"));
     }
 
     @Test
     void 두명의_우승자가_발생하는_경우() {
         cars.play(List.of(0, 1, 2, 8, 4));
         cars.play(List.of(0, 5, 2, 7, 6));
-        assertThat(cars.getWinners()).isEqualTo(Arrays.asList("cosmo", "kyne"));
+        assertThat(cars.winners()).isEqualTo(Arrays.asList("cosmo", "kyne"));
     }
 }
